# roan

./: Cargo.toml  README.md  install_targets.sh  run.sh
glandroid/: Cargo.toml  README.md
glandroid/src/: app.rs  lib.rs  main.rs
glandroid/src/shaders/: tri.frag  tri.vert
minimum/: Cargo.toml
minimum/src/: lib.rs  main.rs
src/: lib.rs
